@@ -1,6 +1,12 @@
-# homeworkSubmission
+# Homework Submission System
 
 #About this application
+- A Homework Submission System is an online platform that allows students to submit assignments digitally, making the process more efficient and organized. It enables teachers to collect, review, and grade submissions seamlessly. Features often include file uploads, deadline tracking, and feedback options. Such systems enhance communication between students and instructors while ensuring timely and secure submission of assignments.
+
+#How to use the application once the clone
+- make sure the IntelliJ loads all the Maven dependencies
+- The path of JavaFX libraries is defined at: Run > Edit Configurations > LoginPage
+- Add vm options as: --module-path (JavaFX library path) --add-modules (required modules)   
 
 #Collaborators
 - Ritesh Ghimire
